# CrewAI-Langgraph-Projects

./: README.md
crewai-course/: automate_event_planning.ipynb  automated_project_planning.ipynb  bloggerteam.ipynb  collaboration_financial_analysis.ipynb  crewai-with-memory.py  customersupport.ipynb  example-cerebras.py  fake_resume.md  job_application_crew.ipynb  marketing_report.md  tools-customer-outreach.ipynb  venue_details.json
crewai-course/.ipynb_checkpoints/: customersupport-checkpoint.ipynb
crewai-course/agentic-sales-project/: agentic-sales.ipynb  crewai_flow_complex.html
crewai-course/agentic-sales-project/config/: email_engagement_agents.yaml  lead_qualification_agents.yaml  lead_qualification_tasks.yaml
crewai-course/project-process-report/: process-report.ipynb
crewai-course/storage/: memory.db
ecommerse-recommender-bots/: README.md  crewai_bot.py  langgraph_bot.py  main.py  memory.py  pyproject.toml
openai-sdk/: main.py
