[project]
name = "ecommerse-recommender-bots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.186.1",
    "crewai-tools>=0.71.0",
    "ddgs>=9.6.0",
    "fastapi>=0.116.2",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.7",
]
